--- a/css/estilos.css
+++ b/css/estilos.css
@@ -299,7 +299,7 @@ nav a:hover{
 #thContainer{
     width: 33%;
     min-width: 300px;
-    background-color: white
+    background-color: white;
     padding: 2em;
     border-radius: 0.5em;
 }
